--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://ipsum13.github.io/N-Queens-Visualizer/",
     "name": "n-queens-visualiser",
     "version": "0.1.0",
     "private": true,
